examples/test/testpolicy5618.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5618
  namespace: namespace72
spec:
  podSelector:
    matchLabels:
      key41: value43
      key40: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value19
          key48: value24
      podSelector:
        matchLabels:
          key27: value8
          key13: value27
          key49: value9
